--- a/src/site/_includes/components/filetree.njk
+++ b/src/site/_includes/components/filetree.njk
@@ -1,34 +1,7 @@
-{% from "components/filetreeMenuItem.njk" import menuItem %}
-    
-    <div x-init="isDesktop = (window.innerWidth>=1400) ? true: false;" 
-            x-on:resize.window="isDesktop = (window.innerWidth>=1400) ? true : false;" 
-            x-data="{isDesktop: true, showFilesMobile: false}">
+<div x-init="isDesktop = (window.innerWidth>=1400) ? true: false;" 
+        x-on:resize.window="isDesktop = (window.innerWidth>=1400) ? true : false;" 
+        x-data="{isDesktop: true, showFilesMobile: false}">
 
-        <div x-show.important="!isDesktop" style="display: none;">
-            {%include "components/navbar.njk"%}
-        </div>
-        
-        <div x-show="showFilesMobile && !isDesktop" @click="showFilesMobile = false" style="display:none;" class="fullpage-overlay"></div>
-
-      <nav class="filetree-sidebar"  x-show.important="isDesktop || showFilesMobile" style="display: none;">
-        {% for imp in dynamics.filetree.beforeTitle %}
-            {% include imp %}
-        {% endfor %}
-         <a href="/" style="text-decoration: none;">
-               <h1 style="text-align:center;">{{meta.siteName}}</h1>
-         </a>
-         {% for imp in dynamics.filetree.afterTitle %}
-            {% include imp %}
-        {% endfor %}
-        {% if settings.dgEnableSearch === true%}
-            <div style="display: flex; justify-content: center;">
-                {% include "components/searchButton.njk" %}
-            </div>
-        {%endif%}
-         <div class="folder" x-data="{isOpen: true}">
-               {%- for fileOrFolderName, fileOrFolder in filetree -%}
-                  {{menuItem(fileOrFolderName, fileOrFolder, 0, fileOrFolderName)}}
-               {%- endfor -%}
-         </div>
-      </nav>
-    </div>
+    {# Navbar luôn hiển thị trên mọi màn hình #}
+    {%include "components/navbar.njk"%}
+</div>
